# fnal-artdaq

./: .gitignore  CMakeLists.txt  README
Compression/: BlockReader.cc  BlockReader.hh  BuildHuffmanTable.cc  BuildRiceTable.cc  CMakeLists.txt  Codes.cc  DecodeHuffman.cc  Decoder.cc  Decoder.hh  EncodeDS50.cc  EncodeHuffman.cc  Encoder.cc  Encoder.hh  HuffmanTable.cc  HuffmanTable.hh  MakeSample.cc  Makefile  Properties.hh  README.txt  SymCode.cc  SymCode.hh  SymProb.cc  SymProb.hh  SymTable.cc  SymTable.hh  Table.cc  Table.hh  Tree.hh  huffman.hs  tester.cc  thirty-two-12-bit-table.txt  thirty-two-12-bit-table_reversed.txt  thirty-two-12-bit.dat2  use_huffman.hs
DAQdata/: CMakeLists.txt  DS50data.cc  DS50data.hh  Fragment.cc  Fragment.hh  Fragments.hh  RawData.hh  RawEvent.cc  RawEvent.hh  classes.h  classes_def.xml  features.hh
DAQrate/: CMakeLists.txt  ConcurrentQueue.hh  Config.cc  Config.hh  DS50EventGenerator.cc  DS50EventGenerator.hh  DS50EventReader.cc  DS50EventReader.hh  DS50EventSimulator.cc  DS50EventSimulator.hh  Debug.cc  Debug.hh  EventPool.cc  EventPool.hh  EventStore.cc  EventStore.hh  Fragment.hh  FragmentPool.cc  FragmentPool.hh  GlobalQueue.cc  GlobalQueue.hh  Handles.cc  Handles.hh  MPIProg.cc  MPIProg.hh  Makefile  MonitoredQuantity.cc  MonitoredQuantity.hh  Mpi.cc  Mpi.hh  NeatTopicsMPI.odp  Perf.cc  Perf.hh  RHandles.cc  RHandles.hh  RawData.hh  SHandles.cc  SHandles.hh  SimpleQueueReader.cc  SimpleQueueReader.hh  (+20 more)
DAQsource/: CMakeLists.txt  RawInput_source.cc  driver.cc
artdaq/Application/: CMakeLists.txt  Commandable.cc  Commandable.hh  Commandable.sm  CommandableFragmentGenerator.cc  CommandableFragmentGenerator.hh  CompositeDriver.hh  CompositeDriver_generator.cc  GeneratorMacros.hh  TaskType.hh  configureMessageFacility.cc  configureMessageFacility.hh  makeCommandableFragmentGenerator.cc  makeCommandableFragmentGenerator.hh
artdaq/Application/MPI2/: Aggregator.cc  Aggregator.hh  AggregatorApp.cc  AggregatorApp.hh  AggregatorCore.cc  AggregatorCore.hh  AggregatorMain.cc  BoardReaderApp.cc  BoardReaderApp.hh  BoardReaderCore.cc  BoardReaderCore.hh  BoardReaderMain.cc  CMakeLists.txt  EventBuilder.cc  EventBuilder.hh  EventBuilderApp.cc  EventBuilderApp.hh  EventBuilderCore.cc  EventBuilderCore.hh  EventBuilderMain.cc  FragmentReceiver.cc  FragmentReceiver.hh  MPISentry.cc  MPISentry.hh  StatisticsHelper.cc  StatisticsHelper.hh  boardreader.cc  configureMessageFacility.cc  eventbuilder.cc  pmt.rb
artdaq/ArtModules/: ArtdaqBuildInfo_module.cc  BuildInfo_module.hh  CMakeLists.txt  DS50Compression_module.cc  DS50DataCharacterizer_module.cc  DS50Decompression_module.cc  InFlightConfiguration.h  InFlightConfiguration_service.cc  NetMonInput_source.cc  NetMonOutput_module.cc  NetMonTransportService.h  NetMonTransportServiceInterface.h  NetMonTransportService_service.cc  PrintVersionInfo_module.cc  RawInput_source.cc  classes.h  classes_def.xml  hosts-5.5.1.txt  pkginfo.hh
artdaq/ArtModules/detail/: RawEventQueueReader.cc  RawEventQueueReader.hh
artdaq/DAQdata/: CMakeLists.txt  CommandableFragmentGenerator.cc  CommandableFragmentGenerator.hh  DS50Board.cc  DS50Board.hh  DS50BoardWriter.hh  DS50CompressedEvent.cc  DS50CompressedEvent.hh  DS50FragmentReader.cc  DS50FragmentReader.hh  DS50FragmentSimulator.cc  DS50FragmentSimulator.hh  DS50RawData.cc  DS50RawData.hh  DS50data.cc  DS50data.hh  Debug.cc  Debug.hh  Fragment.cc  Fragment.hh  FragmentGenerator.cc  FragmentGenerator.hh  FragmentGenerator.hh.orig  FragmentHandle.hh  Fragments.hh  GeneratorMacros.hh  GenericFragmentSimulator.cc  GenericFragmentSimulator.hh  GenericFragmentSimulator_generator.cc  NetMonHeader.cc  NetMonHeader.hh  PackageBuildInfo.cc  PackageBuildInfo.hh  RawEvent.cc  RawEvent.hh  classes.h  classes_def.xml  features.hh  makeCommandableFragmentGenerator.cc  makeCommandableFragmentGenerator.hh  (+2 more)
artdaq/DAQrate/: CMakeLists.txt  ConcurrentQueue.hh  Config.cc  Config.hh  DS50EventGenerator.cc  DS50EventGenerator.hh  DS50EventReader.cc  DS50EventReader.hh  DS50EventSimulator.cc  DS50EventSimulator.hh  DS50FragmentReader.cc  DS50FragmentReader.hh  DS50FragmentSimulator.cc  DS50FragmentSimulator.hh  Debug.cc  Debug.hh  EventStore.cc  EventStore.hh  Fragment.hh  FragmentGenerator.cc  FragmentGenerator.hh  FragmentPool.cc  FragmentPool.hh  GenericFragmentSimulator.cc  GenericFragmentSimulator.hh  GlobalQueue.cc  GlobalQueue.hh  MPIProg.cc  MPIProg.hh  MPITag.hh  Makefile  MetricManager.cc  MetricManager.hh  MonitoredQuantity.cc  MonitoredQuantity.hh  Perf.cc  Perf.hh  README.txt  RHandles.cc  RHandles.hh  (+21 more)
artdaq/DAQsource/: CMakeLists.txt  DS50RawInput_source.cc  RawInput_source.cc  driver.cc
artdaq/Utilities/: CMakeLists.txt  SimpleLookupPolicy.cc  SimpleLookupPolicy.h  TimeUtils.cc  TimeUtils.h
exe/: CMakeLists.txt  boardreader.cc  builder.cc  commandable.cc  driver.cc  eventbuilder.cc  numawrap  rawToRoot.cc
test/: CMakeLists.txt
test/Application/: CMakeLists.txt  CommandableFragmentGenerator_t.cc
test/ArtModules/: CMakeLists.txt  DS50CompressionChecker_module.cc  FragmentSniffer_module.cc  builder_art_compress_t.fcl  builder_art_compress_t.sh  daq_flow_t.cc  daq_flow_t.fcl  driver_t.fcl  hosts-5-5-10.txt  hosts-5-5-15.txt  hosts-5-5-20.txt  hosts-5-5-5.txt  raw_event_queue_reader_t.cc  read_files_t.fcl
test/ArtModules/fcl/: comp.fcl  (+3 more)
test/Compression/: CMakeLists.txt  compress_t.cc
test/DAQdata/: CMakeLists.txt  CommandableFragmentGenerator_t.cc  DS50Board_t.cc  FragmentGenerator_t.cc  Fragment_t.cc  GenericFragmentSimulator_t.cc  RawEvent_t.cc
test/DAQrate/: CMakeLists.txt  EventStore_t.cc  FragCounter_t.cc  FragmentGenerator_t.cc  GenericFragmentSimulator_t.cc  config_t.cc  config_with_art_t.cc  hosts-1-1-0-mix.txt  hosts-1-1-0.txt  hosts-5-5-0-mix.txt  hosts-5-5-0.txt  s_r_handles.cc
test/DAQsource/: CMakeLists.txt  FragmentSniffer_module.cc  daq_flow_t.cc  daq_flow_t.fcl  driver_t.fcl  ds50_read_t.fcl  raw_event_queue_reader_t.cc  read_files_t.fcl
ups/: CMakeLists.txt  artdaq-config.cmake.in  artdaq.table.in  product_deps  product_list  setup_for_development
(+171 files in other folders)
